# firefox

./: Cargo.toml
browser/app/profile/: firefox.js
security/: nss.symbols
supply-chain/: audits.toml
toolkit/components/passwordmgr/: LoginManager.sys.mjs  metrics.yaml  moz.build  nsILoginManager.idl  rust-mirror.sys.mjs  storage-desktop.sys.mjs  storage-json.sys.mjs  storage-rust.sys.mjs
toolkit/components/passwordmgr/test/: LoginTestUtils.sys.mjs
toolkit/components/passwordmgr/test/browser/: browser.toml  browser_rust_storage.js
toolkit/components/passwordmgr/test/unit/: head.js  test_context_menu.js  test_logins_change.js  test_logins_metainfo.js  test_rust_mirror.js  test_storage.js  test_telemetry.js  xpcshell.toml
toolkit/components/uniffi-bindgen-gecko-js/: config.toml
toolkit/components/uniffi-bindgen-gecko-js/components/: Cargo.toml  lib.rs  moz.build
toolkit/components/uniffi-js/: GeneratedScaffolding.cpp
toolkit/modules/: JSONFile.sys.mjs
toolkit/modules/tests/xpcshell/: test_JSONFile.js
